--- a/C3_AP_mqtt.html
+++ b/C3_AP_mqtt.html
@@ -13,6 +13,7 @@ body {
   font-size: 20px;
 }
 
+/* 로그창 */
 #logBox {
   white-space: pre-line;
   height: 200px;
@@ -27,39 +28,38 @@ body {
 #timeBox {
   text-align: right;
   color: #aaa;
-  font-size: 0.95rem;
-  margin-top: 4px;
+  font-size: 1rem;
+  margin-top: 6px;
 }
 
-/* 공동 스타일 */
+/* 정보 카드 */
 .info-card {
   background: #1e293b;
   border: 1px solid #334155;
   border-radius: 14px;
   padding: 16px;
   display: flex;
-  gap: 12px;
+  gap: 14px;
   align-items: center;
 }
 
 .info-title {
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   font-weight: 700;
-  opacity: 0.9;
 }
 .info-value {
-  font-size: 1.95rem;
+  font-size: 2.1rem;
   font-weight: 900;
 }
 
-/* LED */
+/* LED 표시 */
 .led-on {
   display: inline-block;
   padding: 10px 26px;
   background: #22c55e;
   color: white;
-  border-radius: 10px;
-  font-size: 1.6rem;
+  border-radius: 12px;
+  font-size: 1.8rem;
   font-weight: 900;
 }
 .led-off {
@@ -67,12 +67,12 @@ body {
   padding: 10px 26px;
   background: #ef4444;
   color: white;
-  border-radius: 10px;
-  font-size: 1.6rem;
+  border-radius: 12px;
+  font-size: 1.8rem;
   font-weight: 900;
 }
 
-/* 📱 모바일 최적화 */
+/* 스마트폰 전용 강화 모드 */
 @media (max-width: 480px) {
 
   body {
@@ -80,21 +80,23 @@ body {
   }
 
   .info-title {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
   }
 
   .info-value {
-    font-size: 2.3rem;
+    font-size: 2.5rem;
   }
 
   .text-4xl {
-    font-size: 3rem;
+    font-size: 3.3rem;
   }
 
+  /* 버튼 스타일: 폭 절반, 폰트 2배 */
   button {
-    font-size: 1.8rem !important;
-    padding-top: 18px !important;
-    padding-bottom: 18px !important;
+    font-size: 2.4rem !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+    width: 90% !important; /* 버튼 폭 줄임 */
   }
 }
 </style>
@@ -104,11 +106,11 @@ body {
 
 <div class="w-full mx-auto py-4 px-4">
 
-  <h1 class="text-4xl font-extrabold mb-6 text-center tracking-wide">
+  <h1 class="text-4xl font-extrabold mb-6 text-center">
     ESP32 MQTT Dashboard
   </h1>
 
-  <!-- === INFO 2열 묶음 === -->
+  <!-- 2열 구조의 SSID/RSSI + IP/LED -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
 
     <!-- SSID -->
@@ -149,21 +151,21 @@ body {
 
   </div>
 
-  <!-- === BUTTONS === -->
-  <div class="grid grid-cols-3 gap-4 my-6 px-1">
+  <!-- 버튼 3개: 폭 좁게 + 폰트 2배 -->
+  <div class="grid grid-cols-3 gap-3 my-6 place-items-center">
 
     <button onclick="sendLED(1)"
-      class="bg-green-600 py-4 rounded-xl text-2xl font-extrabold shadow-xl active:scale-95 transition">
+      class="bg-green-600 rounded-xl shadow-2xl active:scale-95 transition">
       LED<br>ON
     </button>
 
     <button onclick="sendLED(0)"
-      class="bg-yellow-500 py-4 rounded-xl text-2xl font-extrabold shadow-xl active:scale-95 transition">
+      class="bg-yellow-500 rounded-xl shadow-2xl active:scale-95 transition">
       LED<br>OFF
     </button>
 
     <button onclick="sendReset()"
-      class="bg-red-600 py-4 rounded-xl text-2xl font-extrabold shadow-xl active:scale-95 transition">
+      class="bg-red-600 rounded-xl shadow-2xl active:scale-95 transition">
       RESET
     </button>
 
@@ -176,6 +178,7 @@ body {
 </div>
 
 <script>
+/* MQTT 연결 */
 let brokerURL = "wss://broker.hivemq.com:8884/mqtt";
 let clientId = "espui_" + Math.random().toString(16).substr(2, 8);
 let client = mqtt.connect(brokerURL, { clientId });
@@ -192,7 +195,7 @@ client.on("connect", () => {
   client.subscribe("/esp32/log");
 });
 
-/* STATUS update */
+/* MQTT 메시지 */
 client.on("message", (topic, payload) => {
   const msg = payload.toString();
 
@@ -203,8 +206,10 @@ client.on("message", (topic, payload) => {
     rssi.innerText = j.rssi + " dBm";
     ip.innerText = j.ip;
 
-    if (j.led == 1) ledState.innerHTML = "<span class='led-on'>ON</span>";
-    else ledState.innerHTML = "<span class='led-off'>OFF</span>";
+    if (j.led == 1)
+      ledState.innerHTML = "<span class='led-on'>ON</span>";
+    else
+      ledState.innerHTML = "<span class='led-off'>OFF</span>";
 
     log("[STATUS] " + msg);
   }
@@ -212,7 +217,7 @@ client.on("message", (topic, payload) => {
   if (topic === "/esp32/log") log("[ESP] " + msg);
 });
 
-/* COMMANDS */
+/* COMMAND */
 function sendLED(v) {
   client.publish("/esp32/cmd/led", String(v));
   log("[CMD] LED=" + v);
