--- a/test.html
+++ b/test.html
@@ -1,1 +1,226 @@
-ㅊㄷㅇㅍㄷㅍ
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<title>ESP32 MQTT Dashboard</title>
+<script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+/* 로그창 */
+#logBox {
+  white-space: pre-line;
+  height: 200px;
+  background: #000;
+  color: #0f0;
+  padding: 12px;
+  overflow-y: auto;
+  border: 1px solid #333;
+  font-family: Consolas, monospace;
+  font-size: 1.0rem;
+}
+#timeBox {
+  text-align: right;
+  color: #aaa;
+  font-size: 1rem;
+  margin-top: 6px;
+}
+
+/* 정보 카드 */
+.info-card {
+  background: #1e293b;
+  border: 1px solid #334155;
+  border-radius: 14px;
+  padding: 18px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.info-title {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+.info-value {
+  font-size: 2.2rem;
+  font-weight: 900;
+}
+
+/* LED 상태 표시 */
+.led-on, .led-off {
+  display: inline-block;
+  padding: 10px 28px;
+  border-radius: 14px;
+  font-size: 1.8rem;
+  font-weight: 900;
+  color: #fff;
+}
+
+.led-on { background: #22c55e; }
+.led-off { background: #ef4444; }
+
+/* 버튼 (RESET과 같은 사이즈) */
+.action-btn {
+  padding: 16px 26px;
+  border-radius: 14px;
+  font-size: 1.8rem;
+  font-weight: 900;
+  text-align: center;
+  width: 90%;
+  max-width: 160px;   /* LED 상태 OFF 버튼 사이즈 */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+  color: white;
+}
+
+/* 모바일 전용 확대 */
+@media (max-width: 480px) {
+
+  body { font-size: 26px; }
+
+  .info-title { font-size: 1.75rem; }
+  .info-value { font-size: 2.5rem; }
+  .text-4xl { font-size: 3.4rem; }
+
+  .action-btn {
+    font-size: 2.2rem;
+    padding: 20px 28px;
+    width: 100%;
+    max-width: 180px;
+  }
+}
+</style>
+</head>
+
+<body class="bg-slate-900 text-slate-100">
+
+<div class="w-full mx-auto py-4 px-4">
+
+  <h1 class="text-4xl font-extrabold mb-6 text-center">
+    ESP32 MQTT Dashboard
+  </h1>
+
+  <!-- SSID + RSSI -->
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+
+    <div class="info-card">
+      <div class="text-4xl">📶</div>
+      <div>
+        <div class="info-title">SSID</div>
+        <div id="ssid" class="info-value">--</div>
+      </div>
+    </div>
+
+    <div class="info-card">
+      <div class="text-4xl">📡</div>
+      <div>
+        <div class="info-title">RSSI</div>
+        <div id="rssi" class="info-value">-- dBm</div>
+      </div>
+    </div>
+
+    <!-- IP + LED -->
+    <div class="info-card">
+      <div class="text-4xl">🌐</div>
+      <div>
+        <div class="info-title">IP</div>
+        <div id="ip" class="info-value">--</div>
+      </div>
+    </div>
+
+    <div class="info-card">
+      <div class="text-4xl">💡</div>
+      <div>
+        <div class="info-title">LED 상태</div>
+        <div id="ledState" class="info-value">--</div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- 버튼: LED 상태 버튼 크기와 동일하게 맞춤 -->
+  <div class="flex justify-center gap-3 my-6">
+
+    <button onclick="sendLED(1)"
+      class="action-btn bg-green-600 active:scale-95 transition">
+      ON
+    </button>
+
+    <button onclick="sendLED(0)"
+      class="action-btn bg-yellow-500 active:scale-95 transition">
+      OFF
+    </button>
+
+    <button onclick="sendReset()"
+      class="action-btn bg-red-600 active:scale-95 transition">
+      RESET
+    </button>
+
+  </div>
+
+  <div id="logBox">[LOG] Ready…</div>
+  <div id="timeBox">--:--:--</div>
+
+</div>
+
+<script>
+let brokerURL = "wss://broker.hivemq.com:8884/mqtt";
+let clientId = "espui_" + Math.random().toString(16).substr(2, 8);
+let client = mqtt.connect(brokerURL, { clientId });
+
+function log(msg) {
+  const box = document.getElementById("logBox");
+  box.textContent += "\n" + msg;
+  box.scrollTop = box.scrollHeight;
+}
+
+client.on("connect", () => {
+  log("[MQTT] Connected");
+  client.subscribe("/esp32/status");
+  client.subscribe("/esp32/log");
+});
+
+client.on("message", (topic, payload) => {
+  const msg = payload.toString();
+
+  if (topic === "/esp32/status") {
+    let j = JSON.parse(msg);
+
+    ssid.innerText = j.ssid;
+    rssi.innerText = j.rssi + " dBm";
+    ip.innerText = j.ip;
+
+    if (j.led == 1)
+      ledState.innerHTML = "<span class='led-on'>ON</span>";
+    else
+      ledState.innerHTML = "<span class='led-off'>OFF</span>";
+
+    log("[STATUS] " + msg);
+  }
+
+  if (topic === "/esp32/log") log("[ESP] " + msg);
+});
+
+function sendLED(v) {
+  client.publish("/esp32/cmd/led", String(v));
+  log("[CMD] LED=" + v);
+}
+
+function sendReset() {
+  client.publish("/esp32/cmd/reset", "1");
+  log("[CMD] RESET");
+}
+
+setInterval(() => {
+  const t = new Date();
+  timeBox.innerText = t.toLocaleString("ko-KR", { hour12: false });
+}, 1000);
+</script>
+
+</body>
+</html>
